--- a/_includes/workshop_ad.html
+++ b/_includes/workshop_ad.html
@@ -4,28 +4,13 @@
 <div class="jumbotron">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <h2>Instructor Training</h2>
+      <h2 style="text-align:center">ACML 2022 Workshop</h2>
+      <h1 style="text-align:center">Machine Learning for Medical Imaging</h1>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-10" style="text-align:center">
 	  <p>{% for loc in page.locations %}{{ loc.venue }}{% unless forloop.last %}, {% endunless %}{% endfor %}</p>
-          <p>{{page.humandate}}</p>
+          <p style="text-align:right">{{page.humandate}}</p>
           <p>{% if page.humantime %}{{page.humantime}}{% endif %}</p>
-        </div>
-        <div class="col-md-6">
-          <p>
-          <strong>Instructors:</strong>
-          {% if page.instructor %}
-          {{page.instructor | join: ', ' %}}
-          {% else %}
-          to be announced.
-          {% endif %}
-          </p>
-          {% if page.helper %}
-          <p>
-          <strong>Helpers:</strong>
-          {{page.helper | join: ', ' %}}
-          </p>
-          {% endif %}
         </div>
       </div>
     </div>
