--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1264,11 +1264,12 @@ h6 .small,
 }
 h1,
 .h1 {
-  font-size: 36px;
+  text-align: center;
+  font-size: 30px;
 }
 h2,
 .h2 {
-  font-size: 30px;
+  font-size: 27px;
 }
 h3,
 .h3 {
